--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,8 @@
     "node/exports-style": [ "error", "module.exports" ],
     "no-trailing-spaces": "error",
     "object-curly-spacing": [ "error", "always" ],
-    "semi": [ "error", "always" ]
+    "semi": [ "error", "always" ],
+    "arrow-parens": [2, "as-needed", { "requireForBlockBody": true }]
   },
   "globals": {
     "describe": true,
