--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "supertest": "^3.0.0"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "cors": "^2.8.1",
