--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
 language: node_js
 node_js:
 - '6'
+before_install:
+    - pip install --user codecov    #Install codecov
+after_success:
+    - yarn run codecov
+    - codecov
