--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "body-parser": "^1.17.1",
     "cors": "^2.8.1",
     "express": "^4.15.2",
-    "mongoose": "^4.8.6"
+    "mongoose": "^4.8.6",
+    "node-cron": "^1.1.3"
   },
   "engines": {
     "node": ">=6.0.0"
