--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "cors": "^2.8.1",
+    "cron": "^1.2.1",
     "express": "^4.15.2",
-    "mongoose": "^4.8.6",
-    "node-cron": "^1.1.3"
+    "mongoose": "^4.8.6"
   },
   "engines": {
     "node": ">=6.0.0"
