--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.17.1",
     "cors": "^2.8.1",
     "cron": "^1.2.1",
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "mongoose": "^4.8.6"
   },
