--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expect": "^1.20.2",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
+    "mockgoose": "^7.3.1",
     "nodemon": "^1.11.0",
     "supertest": "^3.0.0"
   },
