Edit test script to run codecov too

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node src/server.js",
     "dev": "export NODE_ENV=development || SET NODE_ENV=development&& nodemon ./src/server.js",
     "test": "mocha ./src/test/index.js",
-    "test-watch": "export NODE_ENV=test || SET NODE_ENV=test&& nodemon --exec npm run test",
+    "test-watch": "export NODE_ENV=test || SET NODE_ENV=test&& nodemon --exec npm run codecov",
     "codecov": "export NODE_ENV=test || SET NODE_ENV=test&& istanbul cover ./node_modules/mocha/bin/_mocha src/test/index.js --report lcovonly -- -R spec"
   },
   "keywords": [],
