--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "mockgoose": "^7.3.1",
+    "nock": "^9.0.13",
     "nodemon": "^1.11.0",
     "supertest": "^3.0.0"
   },
