--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/server.js",
-    "dev":
-      "export NODE_ENV=development || SET NODE_ENV=development&& nodemon ./src/server.js"
+    "dev": "export NODE_ENV=development || SET NODE_ENV=development&& nodemon ./src/server.js",
+    "lint": "eslint --fix --ext .js src/"
   },
   "keywords": [],
   "author": "",
@@ -15,11 +15,11 @@
     "axios": "0.17.1",
     "body-parser": "1.18.2",
     "cors": "2.8.4",
+    "dotenv": "4.0.0",
     "express": "4.16.2",
     "mongoose": "4.13.2"
   },
   "devDependencies": {
-    "dotenv": "4.0.0",
     "eslint": "4.11.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-node": "5.2.1",
