--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,6 @@
 {
   "plugins": ["node"],
-  "extends": [
-    "eslint:recommended",
-    "plugin:node/recommended",
-    "plugin:import/errors"
-  ],
+  "extends": ["eslint:recommended", "plugin:node/recommended", "plugin:import/errors"],
   "rules": {
     "comma-dangle": [2, "always-multiline"],
     "indent": [2, 2, { "MemberExpression": 1 }],
@@ -15,7 +11,10 @@
     "semi": [2, "always"],
     "arrow-parens": [2, "as-needed", { "requireForBlockBody": true }],
     "space-infix-ops": [2, { "int32Hint": false }],
-    "quotes": [2, "single"]
+    "quotes": [2, "single"],
+    "max-len": [1, 100],
+    "no-var": 2,
+    "prefer-const": 2
   },
   "globals": {
     "describe": true,
