--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "cors": "2.8.4",
     "dotenv": "4.0.0",
     "express": "4.16.2",
-    "mongoose": "4.13.2"
+    "mongoose": "4.13.2",
+    "rollbar": "^2.3.1"
   },
   "devDependencies": {
     "eslint": "4.11.0",
